Base de datos y cambio de datos hecho